--- a/calc2.html
+++ b/calc2.html
@@ -748,25 +748,25 @@
 	    l = i.toString();
 	    attributeResist[i-1] = attributeResistMatrix[$("ddlEnemyAttribute"+l).selectedIndex];
 	}
-        //11.攻击力Buff(%)
+        //7.攻击力Buff(%)
         let attackBuff = getFloat("txtAttackBuff");
-        //12.敌方防御力Buff(%)
+        //8.敌方防御力Buff(%)
 	let enemyDefence = [0, 0, 0];
 	for(let i=1, l="";i<=3;i++){
 	    l = i.toString();
 	    enemyDefence[i-1] = getFloat("txtEnemyDefence"+l);
 	    enemyDefence[i-1] = Math.max(-100, enemyDefence[i-1]);
 	}
-        //10.卡牌Buff(%)
+        //9.卡牌Buff(%)
         let cardBuff = getFloat("txtCardBuff");
 	let cardResist = [0, 0, 0];
 	for(let i=1, l="";i<=3;i++){
 	    l = i.toString();
 	    cardResist[i-1] = getFloat("txtCardResist"+l);
 	}
-        //9.宝具威力Buff(%)
+        //10.宝具威力Buff(%)
         let npStrength = getFloat("txtNpStrength");
-        //13.特攻威力Buff(%)与宝具特攻(%)
+        //11.特攻威力Buff(%)与宝具特攻(%)
 	let specialAttackBuff = [0, 0, 0];
 	let npSpecialAttack = [1, 1, 1];
 	for(let i=1, l="";i<=3;i++){
@@ -776,12 +776,12 @@
 		npSpecialAttack[i-1] = getFloat("txtNpSpecialAttack") / 100;
 	    }
 	}
-        //14.固定伤害Buff
+        //12.固定伤害Buff
         let damagePlus = getFloat("txtDamagePlus");
-	//15.黄金律
+	//13.黄金律
 	let baseNp = getFloat("txtNpGain");
         let npGainBuff = getFloat("txtNpGainBuff");
-        //16.礼装
+        //14.礼装
 	switch($("ddlCraftEssence").selectedIndex) {
 	    case 2:
 		npStrength += 15;
@@ -822,7 +822,7 @@
                 }
                 npGainBuff += 10;
 	}
-	//17.御主装备
+	//15.御主装备
         npStrength += parseInt($("ddlMysticCode").value);
 	switch($("ddlMysticCode").selectedIndex) {
 	    case 1:
@@ -878,34 +878,26 @@
 	}
         let resultAvg = atk * 0.23 * npCoef * cardColor * (1 + (cardBuff - cardResist[0]) / 100) * Class * ClassResist[0] * attributeResist[0] * Math.max(0, 1 + (attackBuff - enemyDefence[0]) / 100) * (1 + (npStrength + specialAttackBuff[0]) / 100) * npSpecialAttack[0] + damagePlus;
         resultAvg = Math.floor(resultAvg);
+
 	let npGainBase = baseNp * cardNpCoef * (1 + npGainBuff / 100) * (1 + cardBuff /100);
-	let npGain1 = npGainBase * getFloat("ddlEnemyClass1");
-	if ($("ckIsUndying1").checked) {
-	    npGain1 *= 1.2;
+	let npGain = [0, 0, 0];
+	let nHits = getFloat("txtNHits");
+	for(let i=1, l="";i<=3;i++){
+	    l = i.toString();
+	    let npGainNormal = npGainBase * getFloat("ddlEnemyClass"+l);
+	    if ($("ckIsUndying"+l).checked) {
+		npGainNormal *= 1.2;
+	    }
+	    npGainNormal = Math.floor(npGainNormal * 100) / 100;
+	    let npGainOverkill = Math.floor(npGainNormal * 150) / 100;
+	    npGain[i-1] = (npGainOverkill - npGainNormal) * getFloat("txtOverkill"+l) + npGainNormal * nHits;
 	}
-	npGain1 = Math.floor(npGain1 * 100) / 100;
-	let npGainOverkill = Math.floor(npGain1 * 150) / 100;
-	npGain1 = (npGainOverkill - npGain1) * getFloat("txtOverkill1") + npGain1 * getFloat("txtNHits");
-	let npGain2 = npGainBase * getFloat("ddlEnemyClass2");
-        if ($("ckIsUndying2").checked) {
-            npGain2 *= 1.2;
-        }
-        npGain2 = Math.floor(npGain2 * 100) / 100;
-        npGainOverkill = Math.floor(npGain2 * 150) / 100;
-        npGain2 = (npGainOverkill - npGain2) * getFloat("txtOverkill2") + npGain2 * (getFloat("txtNHits"));
-	let npGain3 = npGainBase * getFloat("ddlEnemyClass3");
-        if ($("ckIsUndying3").checked) {
-            npGain3 *= 1.2;
-        }
-        npGain3 = Math.floor(npGain3 * 100) / 100;
-        npGainOverkill = Math.floor(npGain3 * 150) / 100;
-        npGain3 = (npGainOverkill - npGain3) * getFloat("txtOverkill3") + npGain3 * (getFloat("txtNHits"));
-	let npGain = npGain1;
+	let npGainTotal = npGain[0];
 	switch($("txtNTarget").value) {
 	    case "3":
-		npGain += npGain3;
+		npGainTotal += npGain[2];
 	    case "2":
-		npGain += npGain2;
+		npGainTotal += npGain[1];
 	}
 
         let servantName = getDdlText("ddlServant");
@@ -940,7 +932,7 @@
             min: resultMin,
             avg: resultAvg,
             ClassResistType: ClassResistType,
-	    npGain: npGain
+	    npGainTotal: npGainTotal
         };
         resultArr.push(model);
         showResult();
@@ -999,29 +991,29 @@
         newRow.insertCell(-1).innerHTML = obj.lv;      
         //4.ATK          
         newRow.insertCell(-1).innerHTML = obj.atk;
-        //6.宝具等级(oc)
+        //5.宝具等级(oc)
         newRow.insertCell(-1).innerHTML = obj.NP + "(" + obj.oc + ")";
-        //7.宝具倍率      
+        //6.宝具倍率      
         newRow.insertCell(-1).innerHTML = "<span style='color:" + getColor(obj.cardColor) + ";font-weight:bold;'>" + obj.npCoef + "</span>"
-        //8.攻击力Buff
+        //7.攻击力Buff
         newRow.insertCell(-1).innerHTML = obj.attackBuff;
-        //10.卡牌Buff
+        //8.卡牌Buff
         newRow.insertCell(-1).innerHTML = obj.cardBuff;
-        //11.宝具威力Buff
+        //9.宝具威力Buff
         newRow.insertCell(-1).innerHTML = obj.npStrength;
-        //13.宝具特攻(oc)  
+        //10.宝具特攻(oc)  
         newRow.insertCell(-1).innerHTML = obj.npSpecialAttack;
-	//14.黄金律
+	//11.黄金律
 	newRow.insertCell(-1).innerHTML = obj.npGainBuff;
-        //15.宝具伤害最小值    
+        //12.宝具伤害最小值    
         let min1 = newRow.insertCell(-1);
         min1.innerHTML = obj.min[0];
         min1.classList.add(obj.ClassResistType[0]);
-        //16.宝具伤害平均值       
+        //13.宝具伤害平均值       
         let avg = newRow.insertCell(-1);
         avg.innerHTML = obj.avg;
         avg.classList.add(obj.ClassResistType[0]);
-        //15.宝具伤害最小值   
+        //14.宝具伤害最小值   
         let min2 = newRow.insertCell(-1);
         min2.innerHTML = obj.min[1];
         min2.classList.add(obj.ClassResistType[1]);
@@ -1029,9 +1021,9 @@
         let min3 = newRow.insertCell(-1);
         min3.innerHTML = obj.min[2];
         min3.classList.add(obj.ClassResistType[2]);
-	//17.NP获取
-	newRow.insertCell(-1).innerHTML = obj.npGain.toFixed(2);
-        //18.删除操作     
+	//16.NP获取
+	newRow.insertCell(-1).innerHTML = obj.npGainTotal.toFixed(2);
+        //17.删除操作     
         newRow.insertCell(-1).innerHTML = "<a href='javascript:;' onclick='delTr(this," + obj.guid + ")'>删</a>"
     }
     //获取宝具颜色
