--- a/calc.html
+++ b/calc.html
@@ -680,10 +680,12 @@
         resultMin = Math.floor(resultMin);
         let resultAvg = atk * 0.23 * npCoef * cardColor * (1 + cardBuff / 100) * Class * ClassResist * attributeResist * Math.max(0, 1 + attackBuff / 100 - enemyDefence / 100) * (1 + specialAttackBuff / 100 + npStrength / 100) * npSpecialAttack + damagePlus;
         resultAvg = Math.floor(resultAvg);
+
 	let npGainBase = baseNp * cardNpCoef * (1 + npGainBuff / 100) * (1 + cardBuff /100);
-	let npGain = [0, 0, 0];
+	let npGain = 0;
 	let nHits = getFloat("txtNHits");
-	for(let i=1, l="";i<=3;i++){
+	let nTarget = getFloat("txtNTarget");
+	for(let i=1, l="";i<=nTarget;i++){
 	    l = i.toString();
 	    let npGainNormal = npGainBase * getFloat("ddlEnemyClass"+l);
 	    if ($("ckIsUndying"+l).checked) {
@@ -691,14 +693,7 @@
 	    }
 	    npGainNormal = Math.floor(npGainNormal * 100) / 100;
 	    let npGainOverkill = Math.floor(npGainNormal * 150) / 100;
-	    npGain[i-1] = (npGainOverkill - npGainNormal) * getFloat("txtOverkill"+l) + npGainNormal * nHits;
-	}
-	let npGainTotal = npGain[0];
-	switch($("txtNTarget").value) {
-	    case "3":
-		npGainTotal += npGain[2];
-	    case "2":
-		npGainTotal += npGain[1];
+	    npGain += (npGainOverkill - npGainNormal) * getFloat("txtOverkill"+l) + npGainNormal * nHits;
 	}
 
         let servantName = getDdlText("ddlServant");
@@ -734,7 +729,7 @@
             min: resultMin,
             avg: resultAvg,
             ClassResistType: ClassResistType,
-	    npGainTotal: npGainTotal
+	    npGain: npGain
         };
         resultArr.push(model);
         showResult();
@@ -822,7 +817,7 @@
         avg.innerHTML = obj.avg;
         avg.classList.add(obj.ClassResistType);
 	//17.NP获取
-	newRow.insertCell(-1).innerHTML = obj.npGainTotal.toFixed(2);
+	newRow.insertCell(-1).innerHTML = obj.npGain.toFixed(2);
         //18.删除操作     
         newRow.insertCell(-1).innerHTML = "<a href='javascript:;' onclick='delTr(this," + obj.guid + ")'>删</a>"
     }
