--- a/calc2.html
+++ b/calc2.html
@@ -87,7 +87,7 @@
                 </td>
                 <td>NP率(%)</td>
                 <td>
-                    <input type="text" id="txtNpGain" value="0" />
+                    <input type="text" id="txtBaseNp" value="0" />
                 </td>
 	    </tr>
 	    <tr>
@@ -400,15 +400,18 @@
                 </td>
                 <td>敌人1鞭尸</td>
                 <td>
-                    <input type="text" id="txtOverkill1" value="0" />
+                    <input type="text" id="txtOverkill1" value="0" size=14px/>
+		    <span id="spanOverkill1">100%</span>
                 </td>
                 <td>敌人2鞭尸</td>
                 <td>
-                    <input type="text" id="txtOverkill2" value="0" />
+                    <input type="text" id="txtOverkill2" value="0" size=14px/>
+                    <span id="spanOverkill2">100%</span>
                 </td>
                 <td>敌人3鞭尸</td>
                 <td>
-                    <input type="text" id="txtOverkill3" value="0" />
+                    <input type="text" id="txtOverkill3" value="0" size=14px/>
+                    <span id="spanOverkill3">100%</span>
                 </td>
             </tr>
             <tr>
@@ -634,7 +637,7 @@
 	$("txtNHits").value = servant.hit;
         $("txtAttack").value = servant.atk;
         $("txtMaxHp").value = servant.hp;
-	$("txtNpGain").value = servant.np;
+	$("txtBaseNp").value = servant.np;
         //3.宝具倍率
         changeNpCoefficient();
         //4.卡色
@@ -780,7 +783,7 @@
         //12.固定伤害Buff
         let damagePlus = getFloat("txtDamagePlus");
 	//13.黄金律
-	let baseNp = getFloat("txtNpGain");
+	let baseNp = getFloat("txtBaseNp");
         let npGainBuff = getFloat("txtNpGainBuff");
         //14.礼装
 	switch($("ddlCraftEssence").selectedIndex) {
