--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 </head>
 <body>
     <div class="content">
-        <iframe id="iContent" src="calc.html" scrolling="auto" frameborder="0" style="width: 100%;"></iframe>
+        <iframe id="iContent" src="calc2.html" scrolling="auto" frameborder="0" style="width: 100%;"></iframe>
     </div>
     <div id="to_top">
         <a href="#top">返回顶部</a>
