--- a/calc2.html
+++ b/calc2.html
@@ -142,7 +142,7 @@
 	    <tr>
                 <td>技能1</td>
                 <td>
-                    <select id="ddlSkill1">
+                    <select id="ddlSkill1" onchange="bindSkill('1')">
                         <option value="0">无</option>
                         <option value="1">1</option>
                         <option value="2">2</option>
@@ -158,7 +158,7 @@
                 </td>
                 <td>技能2</td>
                 <td>
-                    <select id="ddlSkill2">
+                    <select id="ddlSkill2" onchange="bindSkill('2')">
                         <option value="0">无</option>
                         <option value="1">1</option>
                         <option value="2">2</option>
@@ -174,7 +174,7 @@
                 </td>
                 <td>技能3</td>
                 <td>
-                    <select id="ddlSkill3">
+                    <select id="ddlSkill3" onchange="bindSkill('3')">
                         <option value="0">无</option>
                         <option value="1">1</option>
                         <option value="2">2</option>
@@ -400,17 +400,17 @@
                 </td>
                 <td>敌人1鞭尸</td>
                 <td>
-                    <input type="text" id="txtOverkill1" value="0" size=14px onchange="calPerDamage(1)"/>
+                    <input type="text" id="txtOverkill1" value="0" size=14px onchange="calPerDamage('1')"/>
 		    <span id="spanOverkill1">100%</span>
                 </td>
                 <td>敌人2鞭尸</td>
                 <td>
-                    <input type="text" id="txtOverkill2" value="0" size=14px onchange="calPerDamage(2)"/>
+                    <input type="text" id="txtOverkill2" value="0" size=14px onchange="calPerDamage('2')"/>
                     <span id="spanOverkill2">100%</span>
                 </td>
                 <td>敌人3鞭尸</td>
                 <td>
-                    <input type="text" id="txtOverkill3" value="0" size=14px onchange="calPerDamage(3)"/>
+                    <input type="text" id="txtOverkill3" value="0" size=14px onchange="calPerDamage('3')"/>
                     <span id="spanOverkill3">100%</span>
                 </td>
             </tr>
@@ -535,9 +535,9 @@
         $("txtOverkill1").value = $("txtNHits").value;
         $("txtOverkill2").value = $("txtNHits").value;
         $("txtOverkill3").value = $("txtNHits").value;
-	calPerDamage(1);
-	calPerDamage(2);
-	calPerDamage(3);
+	calPerDamage("1");
+	calPerDamage("2");
+	calPerDamage("3");
     }
     //Hp值变动事件：动态计算双子宝具倍率
     $("txtRemainHp").onchange = function () {
@@ -626,6 +626,9 @@
     };
     $("btnClearBuff").onclick = function() {
         clearBuff();
+	bindSkill("1");
+	bindSkill("2");
+	bindSkill("3");
         setOc();
     }
 
