function name change

--- a/calc2.html
+++ b/calc2.html
@@ -306,7 +306,7 @@
                     <label for="ckIsSpecialAttack1">
                         <input type="checkbox" id="ckIsSpecialAttack1" value="1" /> 特攻
                     </label>
-                    <input type="button" value="应用" id="btnApplyEnemy1" onclick="apply('1')"/>
+                    <input type="button" value="应用" id="btnApplyEnemy1" onclick="applyEnemy('1')"/>
                 </td>
                 <td>敌人2阵营</td>
                 <td>
@@ -321,7 +321,7 @@
                     <label for="ckIsSpecialAttack2">
                         <input type="checkbox" id="ckIsSpecialAttack2" value="1" /> 特攻
                     </label>
-                    <input type="button" value="应用" id="btnApplyEnemy2" onclick="apply('2')"/>
+                    <input type="button" value="应用" id="btnApplyEnemy2" onclick="applyEnemy('2')"/>
                 </td>
                 <td>敌人3阵营</td>
                 <td>
@@ -336,7 +336,7 @@
                     <label for="ckIsSpecialAttack3">
                         <input type="checkbox" id="ckIsSpecialAttack3" value="1" /> 特攻
                     </label>
-                    <input type="button" value="应用" id="btnApplyEnemy3" onclick="apply('3')"/>
+                    <input type="button" value="应用" id="btnApplyEnemy3" onclick="applyEnemy('3')"/>
                 </td>
             </tr>
             <tr>
